--- a/css/addNewTask.css
+++ b/css/addNewTask.css
@@ -1,4 +1,4 @@
-.div__paragraphAddNewTask {
+.section__paragraphAddNewTask {
   font-size: 20px;
   font-weight: 700;
   padding: 20px;
@@ -6,16 +6,12 @@
   margin: 2px 0;
 }
 
-.div__form {
+.form {
   background-color: white;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 20px;
   padding: 20px;
-}
-
-.div__formInput {
-  border: 1px solid #eee;
-  width: 80%;
-  margin-right: 2%;
-  height: 40px;
 }
 
 .div__button {
@@ -23,6 +19,7 @@
   color: white;
   height: 40px;
   border: none;
-  font-size: 16px;
-  padding: 1%;
+}
+.section__newTaks {
+  box-shadow: 0 0 5px #ddd;
 }
