--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html {
   box-sizing: inherit;
 }
 
-.body {
-  background-color: #eee;
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #eee;
 }
